test/sources/fail/float.ys
meth floatfail(): int{
    b: float = -5.;
    yeet 0;
}